@@ -5,6 +5,7 @@
 [general]
 duration        = 60        # duration of encoding, in seconds. 0 means forever
 bufferSecs      = 5         # size of internal slip buffer, in seconds
+reconnect       = yes       # reconnect to the server(s) if disconnected
 
 # this section describes the audio input that will be streamed
 [input]
