@@ -50,6 +50,10 @@ Time for DarkIce to run, in seconds.  If 0, run forever.
 Data read from the sound card is buffered before sent to
 the encoder. Each buffer will be able to hold this
 many seconds of samples.
+.TP
+.I reconnect
+Try to reconnect to the server(s) if the connection is broken during
+streaming, "yes" or "no". (optional parameter, defaults to "yes")
 
 .PP
 .B [input]
